tests/expectations/parser/identifiers/leading_underscore_expression_fail.out
Error [EPAR0370005]: expected '(', '{', '::' -- found ';'
    --> test:5:22
     |
   5 |         return _value;
     |                      ^
